--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -2,6 +2,7 @@
 #Date: 2023-10-05
 #reference: https://gemini.google.com/share/35faf02b45e3
 
+CROSS_COMPILE ?= 
 CC = $(CROSS_COMPILE)gcc
 CFLAGS = -g -Wall -Werror
 
@@ -13,7 +14,7 @@ OBJS = $(SRCS:.c=.o) # Convert source files to object files
 all: $(TARGET)
 # Build the target executable
 $(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
 
 # Compile source files into object files
 %.o: %.c
